Changes. Im confused as fck

--- a/eCO2Tracker/Pages/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Index.cshtml
@@ -3,15 +3,23 @@
 @{
     ViewData["title"] = "Rewards";
 }
+<link rel="stylesheet" href="~/css/rewardsPage.css" />
 
 <h1 class="display-4">@ViewData["title"]</h1>
 <h1>Current points</h1>
 <h1>Placeholder number</h1>
+
 <a href="#myrewards">My rewards</a>
 <a href="#getrewards">Get rewards</a>
+
 <section id="myrewards">
-    <div></div>
+    <div class="card"> 
+        <h1 class="display-4">sth</h1>
+        <p></p>
+        <p></p>
+    </div>
 </section>
+
 <section id="getrewards">
     <div></div>
 </section>
