--- a/eCO2Tracker/Pages/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Index.cshtml
@@ -14,9 +14,9 @@
 
 <section id="myrewards">
     <div class="card"> 
-        <h1 class="display-4">sth</h1>
+        <img src="" />
         <p></p>
-        <p></p>
+        <p>Item Description</p>
     </div>
 </section>
 
