--- a/eCO2Tracker/Pages/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Index.cshtml
@@ -3,23 +3,29 @@
 @{
     ViewData["title"] = "Rewards";
 }
-<link rel="stylesheet" href="~/css/rewardsPage.css" />
 
-<h1 class="display-4">@ViewData["title"]</h1>
-<h1>Current points</h1>
-<h1>Placeholder number</h1>
-
-<a href="#myrewards">My rewards</a>
-<a href="#getrewards">Get rewards</a>
-
-<section id="myrewards">
-    <div class="card"> 
-        <img src="" />
-        <p></p>
-        <p>Item Description</p>
+<div>
+    <p class="rewards-page-title" style="color:#000000">Current points</p>
+    <div class="points-border">
+        <h1 class="display-5" style="color:#ffffff">Placeholder number</h1>
     </div>
-</section>
 
-<section id="getrewards">
-    <div></div>
-</section>
+    <div class ="index-content">
+        <div class="rewards-nav">
+            <a class="rewards-navlink-active" asp-page="/Rewards/Index">About</a>
+            <a class="rewards-navlink" asp-page="/Rewards/Inventory">Inventory</a>
+            <a class="rewards-navlink" asp-page="/Rewards/Store">Store</a>
+        </div>
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+       Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+       when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+       It has survived not only five centuries, but also the leap into electronic typesetting,
+       remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+       and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+   </p>
+    </div>
+    
+</div>
+
+
