--- a/eCO2Tracker/wwwroot/css/rewardsPage.css
+++ b/eCO2Tracker/wwwroot/css/rewardsPage.css
@@ -1,5 +1,58 @@
-﻿.card {
+﻿.rewards-page-title {
+   font-size: 25px;
+   font-weight: 700;
+   text-align: center;
+}
+
+.product-card {
     border: 2px, solid, #000000;
     width: 70%;
-    align-content: center;
+}
+
+.points-border {
+    width: 90%;
+    height: 25vh;
+    margin: auto;
+    background-color: #0ba6a8;
+    border-radius: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.index-content {
+    min-height: 500px;
+}
+
+.rewards-nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.rewards-navlink {
+    margin: 10px 10px 5px 10px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #000000;
+}
+
+.rewards-navlink-active {
+    padding-top: 3px;
+    margin: 10px 10px 5px 10px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #000000;
+    border-bottom: 3px solid #0ba6a8;
+}
+
+.rewards-navlink-active:hover {
+    color: #0ba6a8;
+}
+
+.rewards-navlink:hover {
+    color: #0ba6a8;
 }
