--- a/eCO2Tracker/wwwroot/css/site.css
+++ b/eCO2Tracker/wwwroot/css/site.css
@@ -1,11 +1,13 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+        font-family: 'Poppins', sans-serif;
+    }
 }
 
 html {
@@ -14,7 +16,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Poppins', sans-serif;
 }
 
 input, select {
