Got display working again

--- a/eCO2Tracker/Pages/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Index.cshtml
@@ -7,14 +7,14 @@
 <div>
     <p class="rewards-page-title" style="color:#000000">Current points</p>
     <div class="points-border">
-        <h1 class="display-5" style="color:#ffffff">Placeholder number</h1>
+        <h1 class="display-5" style="color:#ffffff">@Model.User.PointsTotal pts</h1>
     </div>
 
     <div class ="index-content">
         <div class="rewards-nav">
             <a class="rewards-navlink-active" asp-page="/Rewards/Index">About</a>
             <a class="rewards-navlink" asp-page="/Rewards/Inventory">Inventory</a>
-            <a class="rewards-navlink" asp-page="/Rewards/Store">Store</a>
+            <a class="rewards-navlink" asp-page="/Rewards/Store/Index">Store</a>
         </div>
 
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
