Prop gonna revert

--- a/eCO2Tracker/Pages/Admin/Index.cshtml
+++ b/eCO2Tracker/Pages/Admin/Index.cshtml
@@ -1,1 +1,12 @@
+@page
+@model eCO2Tracker.Pages.Admin.IndexModel
+@{
+    ViewData["title"] = "Admin Page";
+}
 
+<div>
+
+    <a asp-page="/Admin/Rewards/AddItems"></a>
+    <a asp-page="/Admin/Rewards/DeleteItems"></a>
+
+</div>
