--- a/eCO2Tracker/Pages/Rewards/Store/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Store/Index.cshtml
@@ -19,6 +19,7 @@
         <div class="div-center">
             <a class="shop-button" href="/Rewards/Store/ShopPMD">PMD</a>
             <a class="shop-button" href="#">Voucher</a>
+            <a class="shop-button" href="#">Other</a>
         </div>
     </div>
 
