--- a/eCO2Tracker/Pages/Admin/Index.cshtml
+++ b/eCO2Tracker/Pages/Admin/Index.cshtml
@@ -5,8 +5,7 @@
 }
 
 <div>
-
-    <a asp-page="/Admin/Rewards/AddItems"></a>
-    <a asp-page="/Admin/Rewards/DeleteItems"></a>
+    
+    <a asp-page="/Admin/Rewards/Index">Press</a>
 
 </div>
