--- a/eCO2Tracker/Pages/Admin/Rewards/Update.cshtml
+++ b/eCO2Tracker/Pages/Admin/Rewards/Update.cshtml
@@ -1,15 +1,20 @@
 ﻿@page
-@model eCO2Tracker.Pages.Admin.Rewards.AddModel
+@model eCO2Tracker.Pages.Admin.Rewards.UpdateModel
 @{
-    ViewData["title"] = "Add Shop Items";
+    ViewData["title"] = "Update Shop Item";
 }
 
+<h1 class="display-4">@ViewData["Title"]</h1>
 <form class="mt-3" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-8">
-            <div class="row mb-3">
 
-               @* Item name*@
+
+            @*Item ID*@
+            <input type="hidden" asp-for="ShopItem.ItemID" />
+
+            @* Item name*@
+            <div class="row mb-3">
                 <label class="col-sm-2 col-form-label" asp-for="ShopItem.ItemName"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="ShopItem.ItemName" />
@@ -73,30 +78,30 @@
             </div>
         </div>
 
-            @*Image*@
-            <div class="col-md-4">
-                <label class="col-sm-4 col-form-label" asp-for="ItemImage">Item Image</label>
-                <div class="col-sm-10">
+        @*Image*@
+        <div class="col-md-4">
+            <label class="col-sm-4 col-form-label" asp-for="ItemImage">Item Image</label>
+            <div class="col-sm-10">
                 <input type="file" onchange="showImgPreview(this)" accept="image/*" class="form-control" asp-for="ItemImage" />
                 <span asp-validation-for="ItemImage" class="text-danger"></span>
-                </div>
-                <img class="img-preview" id="imgPreview" src="/uploads/shopping-bag.png"/>
             </div>
+            <img class="img-preview" id="imgPreview" src="@(string.IsNullOrEmpty(Model.ShopItem.ImageURL) ? "/uploads/shopping-bag.png" : Model.ShopItem.ImageURL)"
+                 onerror="this.src='/uploads/shopping-bag.png'" />
         </div>
+    </div>
 
     <div>
-        <input type="submit" value="Add" class="btn btn-primary" />
+        <input type="submit" value="Update" class="btn btn-primary" />
         <a class="btn btn-secondary ms-2" asp-page="/Admin/Rewards/Index">Cancel</a>
     </div>
 </form>
-
 
 
 <script>
     function showImgPreview(input) {
         if (input.files[0]) {
             var uploadimg = new FileReader();
-            uploadimg.onload = function(displayimg) {
+            uploadimg.onload = function (displayimg) {
                 $("#imgPreview").attr('src', displayimg.target.result);
             }
             uploadimg.readAsDataURL(input.files[0]);
