--- a/eCO2Tracker/Pages/Rewards/Store/ShopPMD.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Store/ShopPMD.cshtml
@@ -12,7 +12,7 @@
         <a asp-page="/Rewards/Shop" class="shop-back-button">BACK</a>
         <div class="d-flex mt-4">
             <img class="wallet-logo" src="~/uploads/wallet-filled-money-tool.png" />
-            <p class="p-2">@Model.User.PointsTotal</p>
+            <p class="p-2">@Model.User.PointsCurrent</p>
         </div>
     </div>
     <div class="container">
