--- a/eCO2Tracker/Pages/Admin/Rewards/Add.cshtml
+++ b/eCO2Tracker/Pages/Admin/Rewards/Add.cshtml
@@ -80,7 +80,7 @@
                 <input type="file" onchange="showImgPreview(this)" accept="image/*" class="form-control" asp-for="ItemImage" />
                 <span asp-validation-for="ItemImage" class="text-danger"></span>
                 </div>
-                <img class="img-preview" id="imgPreview" src="/uploads/shopping-bag.png"/>
+                <img class="img-preview" id="imgPreview" src="~/assets/shopping-bag.png"/>
             </div>
         </div>
 
