--- a/eCO2Tracker/Pages/Rewards/Store/ShopPMD.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Store/ShopPMD.cshtml
@@ -6,12 +6,12 @@
 
 <div class="container">
     <div class="d-flex justify-content-center">
-        <img class="shop-logo" src="~/uploads/PMD.png" />
+        <img class="shop-logo" src="~/assets/PMD.png" />
     </div>
     <div class="col-1">
         <a asp-page="/Rewards/Store/Index" class="shop-back-button">BACK</a>
         <div class="d-flex mt-4">
-            <img class="wallet-logo" src="~/uploads/wallet-filled-money-tool.png" />
+            <img class="wallet-logo" src="~/assets/wallet-filled-money-tool.png" />
             <p class="p-2">@Model.User.PointsCurrent</p>
         </div>
     </div>
@@ -21,7 +21,7 @@
                 @foreach(var item in Model.ShopPMDList)
                 {
                 <div class="product-card">
-                      <img class="product-card-img" src="@(string.IsNullOrEmpty(item.ImageURL) ? "/uploads/shopping-bag.png" : item.ImageURL)" onerror="this.src='uploads/shopping-bag.png'"/>
+                      <img class="product-card-img" src="@(string.IsNullOrEmpty(item.ImageURL) ? "/assets/shopping-bag.png" : item.ImageURL)" onerror="this.src='uploads/shopping-bag.png'"/>
                       <p></p>
                       <div class="product-card-text-div">
                             <p>@item.ItemName</p>
