make some changes

--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Activities" asp-action="Index">Activities</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/ShaoJun/addactivity">Lifestyles</a>
+                            <a class="nav-link text-dark" asp-page="/Lifestyle/Index">Lifestyles</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Rewards/Index">Rewards</a>
