--- a/eCO2Tracker/Views/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Views/Shared/_Layout.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - eCO2TrackerWebApp</title>
+    <title>@ViewData["Title"] - eCO2Tracker</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/eCO2TrackerWebApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/eCO2Tracker.styles.css" asp-append-version="true" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid px-5">
-                <a class="navbar-brand" style="color:#3A807B;font-family:'poppins'" asp-area="" asp-controller="Home" asp-action="Index">eCO2TrackerWebApp</a>
+                <a class="navbar-brand" style="color:#3A807B;font-family:'poppins'" asp-area="" asp-controller="Home" asp-action="Index">eCO2Tracker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
