--- a/eCO2Tracker/Views/User/ReferralCode.cshtml
+++ b/eCO2Tracker/Views/User/ReferralCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<eCO2TrackerWebApp.Models.UserView>
+﻿@model IEnumerable<eCO2Tracker.Models.UserView>
 
 @{
     ViewData["Title"] = "Index";
