--- a/eCO2Tracker/Views/_ViewImports.cshtml
+++ b/eCO2Tracker/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using eCO2TrackerWebApp
-@using eCO2TrackerWebApp.Models
+﻿@using eCO2Tracker
+@using eCO2Tracker.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
