--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
                             <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">Tracking</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">Tracking</a>
+                        </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Employees/Index">FAQ</a>
