--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     @*<partial name="_LoginPartial" />*@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Activities" asp-action="Index">Activities</a>
+                            <a class="nav-link text-dark" asp-page = "/Activity/Index">Activities</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Lifestyle/Index">Lifestyles</a>
