--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -47,11 +47,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">Tracking</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">Tracking</a>
+                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">TrackingResult</a>
                         </li>
 
 
