Fixed delete bug

--- a/eCO2Tracker/Pages/Admin/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Admin/Rewards/Index.cshtml
@@ -40,7 +40,7 @@
                         </td>
                         <td>
                             <form method="post" enctype="multipart/form-data">
-                                <input type="hidden" asp-for="ShopItemDelete.ItemID"
+                                <input type="hidden" asp-for="ShopItemDelete"
                                value="@item.ItemID" />
                                 <input class="delete-button" type="submit" value="Delete">
                             </form>                        
