--- a/eCO2Tracker/Pages/Admin/Rewards/Index.cshtml
+++ b/eCO2Tracker/Pages/Admin/Rewards/Index.cshtml
@@ -5,6 +5,9 @@
 }
 <div class="table-padding">
     <h1 class="display-3 pb-3">Shop Item List</h1>
+    <div>
+        <a class="btn btn-outline-info" href="/Admin/Rewards/Add">+ Add New Item</a>
+    </div>
     <table class="table mt-3">
         <thead>
             <tr>
@@ -15,8 +18,6 @@
                 <th>@Html.DisplayNameFor(model => model.ShopItemList[0].ItemCount)</th>
                 <th>@Html.DisplayNameFor(model => model.ShopItemList[0].CreatedDate)</th>
                 <th>@Html.DisplayNameFor(model => model.ShopItemList[0].ExpiresAt)</th>
-                <th></th>
-                <th></th>
                 <th></th>
             </tr>
         </thead>
@@ -33,16 +34,11 @@
                         <td>@item.CreatedDate</td>
                         <td>@item.ExpiresAt</td>
                         <td>
-                            <a class="view-button-1" asp-page="/Admin/Rewards/Details" asp-route-id="@item.ItemID">View</a>
-                        </td>
-                        <td>
-                            <a asp-page="/Admin/Rewards/Update" asp-route-id="@item.ItemID" class="view-button-1">Update</a>
-                        </td>
-                        <td>
-                            <form method="post" enctype="multipart/form-data">
+                            <a asp-page="/Admin/Rewards/Update" asp-route-id="@item.ItemID" class="btn btn-success">Details</a> |
+                            <form style="display: inline-block" method="post" enctype="multipart/form-data">
                                 <input type="hidden" asp-for="ShopItemDelete"
                                value="@item.ItemID" />
-                                <input class="delete-button" type="submit" value="Delete">
+                                <input class="btn btn-danger" type="submit" value="Delete">
                             </form>                        
                         </td>
                     </tr>
@@ -51,20 +47,31 @@
         </tbody>
     </table>
     <div class="d-flex justify-content-center">
-        @if (Model.GoPageBack > 0)
+        @*If there is only one page on the website*@
+        @if (Model.TotalPages == 1 && Model.PageLeak == 0)
         {
-            <a class="page-nav-link" asp-page="/Admin/Rewards/Index" asp-route-index="@Model.GoPageBack"> Prev </a>
             <p style="margin-left: 1em; margin-right: 1em;">@(Model.GoPageBack + 1)</p>
-            <a class="page-nav-link" asp-page="/Admin/Rewards/Index" asp-route-index="@Model.GoPageFront"> Next </a>
         }
+        @*If there is more than one page*@
         else
         {
+            @*Previous Page option*@
+            @if(Model.CurrentPage > 1)
+            {
+                <a class="page-nav-link" asp-page="/Admin/Rewards/Index" asp-route-index="@Model.GoPageBack"> Prev </a>
+            }            
             <p style="margin-left: 1em; margin-right: 1em;">@(Model.GoPageBack + 1)</p>
-            <a class="page-nav-link" asp-page="/Admin/Rewards/Index" asp-route-index="@Model.GoPageFront"> Next </a>
+
+            @*Next Page option*@               
+            @if(Model.CurrentPage <= Model.TotalPages && Model.PageLeak > 0)
+            {
+                <a class="page-nav-link" asp-page="/Admin/Rewards/Index" asp-route-index="@Model.GoPageFront"> Next </a>
+            }
+            
         }
+        
+        
+        
     </div>
-</div>
-<div>
-    <a class="view-button-1" href="/Admin/Rewards/Add">Add</a>
 </div>
 
