--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                             <a class="nav-link text-dark" asp-page="/Rewards/Index">Rewards</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingPage">Tracking</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Tracking/TrackingHistory">TrackingHistory</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Employees/Index">FAQ</a>
                         </li>
                     </ul>
