--- a/eCO2Tracker/Pages/Activity/Details.cshtml
+++ b/eCO2Tracker/Pages/Activity/Details.cshtml
@@ -49,7 +49,7 @@
 	</dl>
 </div>
 <div>
-	<a id="btnPerform" class="btn btn-success">Perform</a> |
+	<button id="btnPerform" class="btn btn-success" disabled = "@(!Model.ButtonEnabled)">Perform</button> |
 	<a class="btn btn-danger" asp-page="./Delete" asp-route-id="@Model.Activity?.Id">Delete</a> |
 	<a class="btn btn-info" asp-page="./Index">Back to List</a>
 </div>
