--- a/eCO2Tracker/Pages/Rewards/Inventory.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Inventory.cshtml
@@ -7,7 +7,7 @@
 <div>
     <p class="rewards-page-title" style="color:#000000">Current points</p>
     <div class="points-border">
-        <h1 class="display-5" style="color:#ffffff">@Model.User.PointsTotal pts</h1>
+        <h1 class="display-5" style="color:#ffffff">@Model.User.PointsCurrent pts</h1>
     </div>
 
     <div class="index-content">
