--- a/eCO2Tracker/Pages/Shared/_Layout.cshtml
+++ b/eCO2Tracker/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @*Font Google*@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     @*CSS*@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/rewardsPage.css" asp-append-version="true" />
