--- a/eCO2Tracker/Pages/Rewards/Store/Index.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Store/Index.cshtml
@@ -6,7 +6,7 @@
 <div>
     <p class="rewards-page-title" style="color:#000000">Current points</p>
     <div class="points-border">
-        <h1 class="display-5" style="color:#ffffff">@Model.User.PointsTotal pts</h1>
+        <h1 class="display-5" style="color:#ffffff">@Model.User.PointsCurrent pts</h1>
     </div>
 
     <div class="index-content">
@@ -17,9 +17,18 @@
         </div>
 
         <div class="div-center">
-            <a class="shop-button" href="/Rewards/Store/ShopPMD">PMD</a>
-            <a class="shop-button" href="#">Voucher</a>
-            <a class="shop-button" href="#">Other</a>
+            <a class="shop-button" href="/Rewards/Store/ShopPMD">
+                <img class="shop-logo" src="~/assets/PMD.png"/>
+                Mobility
+            </a>
+            <a class="shop-button" href="/Rewards/Store/Voucher">
+                <img class="shop-logo" src="~/assets/voucher.png" />
+                Voucher
+            </a>
+            <a class="shop-button" href="/Rewards/Store/OrgFood">
+                <img class="shop-logo" src="~/assets/organic.png" />
+                Organic Foods
+            </a>
         </div>
     </div>
 
