--- a/eCO2Tracker/Pages/Rewards/Store/Voucher.cshtml
+++ b/eCO2Tracker/Pages/Rewards/Store/Voucher.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
-@model eCO2Tracker.Pages.Rewards.Store.ShopPMDModel
+@model eCO2Tracker.Pages.Rewards.Store.VoucherModel
 @{
-    ViewData["title"] = "Mobility Devices";
+    ViewData["title"] = "Vouchers";
 }
 
 @{
-    if (Model.ShopPMDList.Count == 0)
+    if (Model.VoucherList.Count == 0)
     {
         <div class="container">
             <div class="d-flex justify-content-center">
-                <img class="shop-logo" src="~/assets/organic.png" />
+                <img class="shop-logo" src="~/assets/voucher.png" />
             </div>
             <div class="col-1">
                 <a asp-page="/Rewards/Store/Index" class="shop-back-button">BACK</a>
@@ -27,7 +27,7 @@
     {
         <div class="container">
             <div class="d-flex justify-content-center">
-                <img class="shop-logo" src="~/assets/PMD.png" />
+                <img class="shop-logo" src="~/assets/voucher.png" />
             </div>
             <div class="col-1">
                 <a asp-page="/Rewards/Store/Index" class="shop-back-button">BACK</a>
@@ -38,7 +38,7 @@
             </div>
             <div class="grid-container">
                 @{
-                    @foreach (var item in Model.ShopPMDList)
+                    @foreach (var item in Model.VoucherList)
                     {
                         <div>
                             <div class="image-container">
@@ -59,6 +59,7 @@
                 }
             </div>
         </div>
-
     }
 }
+
+
