--- a/eCO2Tracker/Pages/Admin/Rewards/Update.cshtml
+++ b/eCO2Tracker/Pages/Admin/Rewards/Update.cshtml
@@ -97,7 +97,7 @@
                 <input type="file" onchange="showImgPreview(this)" accept="image/*" class="form-control" asp-for="ItemImage" />
                 <span asp-validation-for="ItemImage" class="text-danger"></span>
             </div>
-            <img class="img-preview" id="imgPreview" src="@(string.IsNullOrEmpty(Model.ShopItem.ImageURL) ? "/uploads/shopping-bag.png" : Model.ShopItem.ImageURL)"
+            <img class="img-preview" id="imgPreview" src="@(string.IsNullOrEmpty(Model.ShopItem.ImageURL) ? "/assets/shopping-bag.png" : Model.ShopItem.ImageURL)"
                     onerror="this.src='/uploads/shopping-bag.png'" />
         </div>
 
