--- a/eCO2Tracker/Pages/Tracking/TrackingDetails.cshtml
+++ b/eCO2Tracker/Pages/Tracking/TrackingDetails.cshtml
@@ -30,6 +30,12 @@
     </div>
 
 
+    <div>
+        <label class="col-sm-2 col-form-label">CO2 saved:</label>
+        <label>@Model.oneUserTravelInstanceOBJECT.EnergySaved g </label>
+    </div>
+
+
     <div class="mt-3">
         <a class="btn btn-secondary" href="/Tracking/TrackingHistory">Back</a>
     </div>
