i dun give 2 shits

--- a/eCO2Tracker/Pages/Admin/Index.cshtml
+++ b/eCO2Tracker/Pages/Admin/Index.cshtml
@@ -6,6 +6,8 @@
 
 <div>
     
-    <a asp-page="/Admin/Rewards/Index">Press</a>
-
+    <a asp-page="/Admin/Rewards/Index">Rewards Admin Function</a>
+    <form method="post">
+        <button type="submit">Delete All User Items</button>
+    </form>
 </div>
